# pyreactivity

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: CI.yml  python-package.yml
docs/: README.md
docs/.vuepress/: config.ts
docs/guide/: introduction.md  quick-start.md
docs/guide/essentials/: computed.md  reactivity-fundamentals.md  watchers.md
docs/guide/tips/: json-serialization.md
docs/zh/: README.md
docs/zh/guide/: introduction.md  quick-start.md
docs/zh/guide/essentials/: computed.md  reactivity-fundamentals.md  watchers.md
docs/zh/guide/tips/: json-serialization.md
src/reactivity/: __init__.py  env.py  flags.py  utils.py
src/reactivity/computed/: __init__.py  definitions.py  utils.py
src/reactivity/effect/: __init__.py  definations.py  utils.py  vars.py
src/reactivity/patches/: __init__.py  json_patch.py
src/reactivity/reactive/: __init__.py  utils.py  vars.py
src/reactivity/ref/: __init__.py  definitions.py  utils.py
src/reactivity/watch/: __init__.py
tests/: test_computed.py  test_effect.py  test_json.py  test_json_patch.py  test_reactive.py  test_ref.py  test_watch.py
