[metadata]
name = pyreactivity
version = attr: reactivity.__version__.__version__
description = Providing a reactivity system similar to Vue.js for Python.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = reactivity, vue, vuejs
license = Apache License 2.0
license_file = LICENSE
author = Zhaoji Wang
author_email = hwoam@outlook.com
url = https://github.com/frederick-wang/pyreactivity
project_urls =
    Bug Tracker = https://github.com/frederick-wang/pyreactivity/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
